--- a/packages/components/src/components/tabs/tabs.scss
+++ b/packages/components/src/components/tabs/tabs.scss
@@ -119,8 +119,7 @@
         display: block;
         position: absolute;
         left: 0;
-        width: 16rem;
-        height: 0.2rem;
+        height: 2px;
         background: var(--brand-red-coral);
         transition: all ease-in-out 0.3s;
 
